2006-05-21  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (element_pad_added_cb), (ghost_seek_pad),
	(gnl_source_change_state):
	Handle the case where more than one pads of the controlled element is
	a valid src pad (intersects with the caps).

2006-05-11  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle.

=== release 0.10.4 ===

2006-05-11   <>

	* configure.ac:
	* NEWS:
	  releasing 0.10.4, "Solomillo de Ternera"

2006-05-10  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (get_clean_toplevel_stack),
	(update_pipeline):
	Fix for correctly playing compositions with gaps between objects.
	* tests/check/Makefile.am:
	* tests/check/complex.c: (gst_element_factory_make_or_warn),
	(composition_pad_added_cb), (compare_segments),
	(sinkpad_event_probe), (sinkpad_buffer_probe), (videotest_gnl_src),
	(videotest_in_bin_gnl_src), (segment_new), (GST_START_TEST),
	(gnonlin_suite), (main):
	Added new unittests for compositions with gaps between objects.
	* tests/check/simple.c: (gnonlin_suite):
	Moved de-activated test_one_above_another to complex

2006-05-10  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.3.2 pre-release

2006-05-08  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (pad_event_probe):
	Don't call ghost_seek_pad() in the event probe and only discard
	the events. The buffer probe will eventually take care of that.
	This guarantees that upstream elements are initialized and ready to
	handle seek events.

2006-05-08  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_finalize),
	(gnl_composition_handle_message),
	(gnl_composition_ghost_pad_set_target),
	(gnl_composition_change_state), (no_more_pads_object_cb),
	(update_pipeline):
	* gnl/gnlfilesource.c: (gnl_filesource_init):
	* gnl/gnlobject.c: (translate_incoming_seek),
	(gnl_object_ghost_pad_full), (gnl_object_remove_ghost_pad),
	(gnl_object_change_state):